--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,19 +1,16 @@
 .fundo{
-
-    background-color: lightgray;
-}
-.fundo-hobbies{
-    background-color: lightblue;
-}
-
-.cinza{
-    background-color: gray;
+    background-image: url("background.jpg");
+    background-size:50%;
+    width: 100%;
+    height: 100vh;
+    color: white;
+    
+    
 }
 
-.branco{
-    background-color: lightblue;
+.fundo-div1{
+    background-color: rgb(26, 25, 25);
+
+    
 }
 
-.fundo-contato{
-    background-color: white;
-}
